Why is recipetitle overriding width?! Fixes the title overflowing bug!

--- a/public/stylesheets/recipe_index.css
+++ b/public/stylesheets/recipe_index.css
@@ -29,7 +29,7 @@
 /*float: left;*/
     font-size: 110%;
 /*float: left;*/
-    width: 650px;
+    /*width: 650px;*/
     padding-top: 7px;
     overflow: visible;
     min-height: 38px;
